--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,23 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+  <group android:scaleX="0.7"
+      android:scaleY="0.7"
+      android:translateX="16.2"
+      android:translateY="16.2">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M79.86,59.46H28.14C26.91,59.46 25.91,60.46 25.91,61.7V79.57C25.91,80.81 26.91,81.81 28.14,81.81H79.86C81.09,81.81 82.09,80.81 82.09,79.57V61.7C82.09,60.46 81.09,59.46 79.86,59.46ZM28.14,56.27C25.15,56.27 22.72,58.7 22.72,61.7V79.57C22.72,82.57 25.15,85 28.14,85H79.86C82.86,85 85.28,82.57 85.28,79.57V61.7C85.28,58.7 82.86,56.27 79.86,56.27H28.14Z"
+        android:fillColor="#99D2FF"
+        android:fillType="evenOdd"/>
+    <path
+        android:pathData="M28.14,25.94H79.86C81.09,25.94 82.09,26.94 82.09,28.18V55.04C83.35,55.46 84.46,56.23 85.28,57.24V28.18C85.28,25.18 82.86,22.75 79.86,22.75H28.14C25.15,22.75 22.72,25.18 22.72,28.18V57.24C23.54,56.23 24.65,55.46 25.91,55.04V28.18C25.91,26.94 26.91,25.94 28.14,25.94ZM26.92,54.78C27.32,54.71 27.73,54.67 28.14,54.67H31.46L37.77,48.14L43.07,54.67H47.17L37.98,43.33L26.92,54.78ZM49.12,54.67H53.3L64.22,41.82L75.12,54.67H79.31L64.22,36.88L49.12,54.67ZM79.86,85H28.14C25.15,85 22.72,82.57 22.72,79.57V61.7C22.72,60.53 23.09,59.44 23.72,58.55C23.09,59.44 22.72,60.53 22.72,61.7L22.72,79.57C22.72,80.6 23,81.55 23.49,82.37C24.44,83.94 26.17,85 28.14,85H79.86C79.86,85 79.86,85 79.86,85ZM42.03,38.39C43.7,38.39 45.06,37.03 45.06,35.36C45.06,33.68 43.7,32.33 42.03,32.33C40.35,32.33 39,33.68 39,35.36C39,37.03 40.35,38.39 42.03,38.39ZM42.03,41.58C45.47,41.58 48.25,38.8 48.25,35.36C48.25,31.92 45.47,29.13 42.03,29.13C38.59,29.13 35.8,31.92 35.8,35.36C35.8,38.8 38.59,41.58 42.03,41.58Z"
+        android:fillColor="#99D2FF"
+        android:fillType="evenOdd"/>
+    <path
+        android:pathData="M22.72,61.7C22.72,58.7 25.15,56.27 28.14,56.27H79.86C82.86,56.27 85.29,58.7 85.29,61.7V79.57C85.29,82.57 82.86,85 79.86,85H28.14C25.15,85 22.72,82.57 22.72,79.57V61.7ZM43.31,62.73H42.48H41.07H40.26L34.36,78.62H37.84L38.94,75.27H44.65L45.75,78.62H49.24L43.31,62.73ZM43.81,72.7H39.78L41.79,66.57L43.81,72.7ZM62.05,78.62V76.06H55.11V62.73H51.83V78.62H54.05H55.11H62.05ZM69.66,78.62V65.29H74.55V62.73H69.66H66.39H61.58V65.29H66.39V78.62H69.66Z"
+        android:fillColor="#99D2FF"
+        android:fillType="evenOdd"/>
+  </group>
 </vector>
